[package]
name = "oath-authenticator"
version = "0.0.0-pre"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apdu-dispatch = { git = "https://github.com/All-Your-Locks-Are-Belong-To-Us/apdu-dispatch", optional = true, rev = "db6a9e5fed3c1d9ad62f43057ebf5e8951a11d9b" }
delog = "0.1.2"
flexiber = { version = "0.1.0", features = ["derive", "heapless"] }
heapless = "0.7"
heapless-bytes = "0.3"
hex-literal = "0.3"
interchange = "0.2"
iso7816 = "0.1"
serde = { version = "1", default-features = false }
trussed = { git = "https://github.com/trussed-dev/trussed" }

[features]
default = ["apdu-dispatch"]

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []
